--- a/package.json
+++ b/package.json
@@ -1,24 +1,84 @@
 {
-  "name": "swapcoralmusic",
-  "version": "0.1.0",
+  "name": "swapiv2",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "vercel-build": "yarn global add node-gyp",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": " next build && next server"
+  },
+  "resolutions": {
+    "@types/react": "17.0.2"
   },
   "dependencies": {
-    "next": "12.2.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@apollo/client": "^3.6.9",
+    "@emotion/react": "11.9.0",
+    "@emotion/styled": "11.6.0",
+    "@svgr/webpack": "^6.2.0",
+    "@types/micro-cors": "^0.1.2",
+    "@types/react-color": "^3.0.6",
+    "@types/youtube-player": "^5.5.6",
+    "@types/yt-player": "^3.5.1",
+    "@vibrant/image": "^3.2.1-alpha.1",
+    "apollo-server-core": "^3.10.1",
+    "apollo-server-micro": "^3.9.0",
+    "aws4": "^1.11.0",
+    "axios": "^0.26.1",
+    "brain.js": "^2.0.0-beta.15",
+    "color-thief-node": "^1.0.4",
+    "colorthief": "^2.3.2",
+    "dotenv": "^16.0.0",
+    "formik": "^2.2.9",
+    "framer-motion": "^5.0.0",
+    "gl": "^5.0.3",
+    "gpu.js": "^2.15.2",
+    "graphql": "^15.3.0",
+    "gyp": "^0.5.0",
+    "jotai": "^1.6.4",
+    "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
+    "lyrics-finder": "^21.7.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
+    "mongoose": "^6.4.0",
+    "next": "12.1.6",
+    "next-auth": "^4.3.4",
+    "node-gyp": "^9.1.0",
+    "node-vibrant": "^3.1.6",
+    "pnpm": "^7.7.1",
+    "react": "^18.2.0",
+    "react-color-extractor": "^1.1.2",
+    "react-dom": "^18.2.0",
+    "react-redux": "^7.2.6",
+    "react-toastify": "^8.2.0",
+    "react-youtube": "^9.0.3",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
+    "scrape-youtube": "^2.3.2",
+    "sharp": "^0.30.7",
+    "spotify-web-api-node": "^5.0.2",
+    "swiper": "^8.0.7",
+    "uuid": "^8.3.2",
+    "youtube-player": "^5.5.2",
+    "yt-player": "^3.5.0",
+    "ytdl-core": "4.9.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/node": "18.7.11",
-    "@types/react": "18.0.17",
-    "@types/react-dom": "18.0.6",
-    "eslint": "8.22.0",
-    "eslint-config-next": "12.2.5",
-    "typescript": "4.7.4"
+    "@babel/core": "^7.17.9",
+    "@types/color-thief-node": "^1.0.1",
+    "@types/cookie": "^0.5.1",
+    "@types/js-cookie": "^3.0.1",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "17.0.13",
+    "@types/react": "17.0.38",
+    "@types/spotify-web-api-node": "^5.0.7",
+    "@types/uuid": "^8.3.4",
+    "eslint": "8.8.0",
+    "eslint-config-next": "12.0.9",
+    "typescript": "4.5.5"
   }
 }
