--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@emotion/react": "11.9.0",
     "@emotion/styled": "11.6.0",
     "@svgr/webpack": "^6.2.0",
+    "@types/extract-colors": "^1.1.0",
     "@types/micro-cors": "^0.1.2",
     "@types/react-color": "^3.0.6",
     "@types/youtube-player": "^5.5.6",
@@ -27,9 +28,11 @@
     "aws4": "^1.11.0",
     "axios": "^0.26.1",
     "brain.js": "^2.0.0-beta.15",
+    "canvas": "^2.9.3",
     "color-thief-node": "^1.0.4",
     "colorthief": "^2.3.2",
     "dotenv": "^16.0.0",
+    "extract-colors": "^1.1.22",
     "formik": "^2.2.9",
     "framer-motion": "^5.0.0",
     "gl": "^5.0.3",
@@ -46,7 +49,7 @@
     "next": "12.1.6",
     "next-auth": "^4.3.4",
     "node-gyp": "^9.1.0",
-    "node-vibrant": "^3.1.6",
+    "node-vibrant": "3.1.5",
     "pnpm": "^7.7.1",
     "react": "^18.2.0",
     "react-color-extractor": "^1.1.2",
