--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "develectron": "electron index.js",
     "start": "next start",
     "lint": "next lint",
+    "rebuild": "electron-rebuild",
     "server": " next build && next server"
   },
   "resolutions": {
@@ -29,7 +31,6 @@
     "color-thief-node": "^1.0.4",
     "colorthief": "^2.3.2",
     "dotenv": "^16.0.0",
-    "electron": "20.1.0",
     "extract-colors": "^1.1.22",
     "formik": "^2.2.9",
     "framer-motion": "^5.0.0",
