--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-color-extractor": "^1.1.2",
     "react-dom": "^18.2.0",
     "react-redux": "^7.2.6",
+    "react-spotify-web-playback": "^0.10.0",
     "react-toastify": "^8.2.0",
     "react-youtube": "^9.0.3",
     "redux": "^4.1.2",
